src/objects/Rfp_Results__c.object
<CustomObject>
    <description>R5 - Rfp Results</description>
    <fields>
        <fullName>Value_of_Quotation_KUSD__c</fullName>
        <label>Value of Quotation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LinkLabel4__c</fullName>
        <description>R5 - Created as part of Req 2461</description>
        <label>LinkLabel4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Rfp_Results__r.Rfp_Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Actual_Completion_Date__c</fullName>
        <description>Actual Completion Date - Created as part of  R5 Req 2461</description>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Estimated_Completion_Date__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Label_10__c</fullName>
        <description>R5 - Created as part of Req 2461</description>
        <label>Label 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Label_1__c</fullName>
        <description>Label1 - Created as part of R5 Req 2461</description>
        <label>Label 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Label_2__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Label 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_LinkLabel1__c</fullName>
        <description>R5 - created as part of req 2461</description>
        <label>LinkLabel1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_LinkLabel2__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>LinkLabel2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_LinkLabel3__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>LinkLabel3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Link_1__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Link 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rfp_Link_2__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Link 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rfp_Link_3__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Link 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rfp_Link_To_Final_Proposal__c</fullName>
        <description>R5 - Created as part of Req 2461</description>
        <label>Link To Final Quotation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rfp_Link_To_Project__c</fullName>
        <description>R5 - Created as part of Req 2461</description>
        <label>Link To Project &amp; Document Management</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rfp_Proposal_Not_Issued__c</fullName>
        <description>R5 - Created as part of Req 2461</description>
        <label>Proposal Not Issued</label>
        <picklist>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Reason_For_Delay_1__c</fullName>
        <description>Reason For Delay - Created as part of R5 Req 2461</description>
        <label>Reason For Delay</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Results__c</fullName>
        <description>R5 - Master Detail relationship to RFP</description>
        <label>RFQ</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rfp_Value2__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Value3__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Value 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Value4__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Value 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Value_10__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Value 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Results</label>
    <nameField>
        <displayFormat>RES-{YY}-{0000}</displayFormat>
        <label>Results Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>